Selu383.SP26.Web/src/components/Navbar.css
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #785e38;
    position: sticky;
    top: 0;
}

nav a:hover {
    transform: scale(1.1);
}

nav .title{
    font-size: 2rem;
    margin: 1rem;
    font-weight: bold;
    text-decoration: none;
    color: white;
}

nav .login{
    font-size: 2rem;
    margin: 1rem;
    font-weight: bold;
    text-decoration: none;
    color: white;
}
nav ul {
    position: center;
    display: flex;
}

nav ul li {
    list-style: none;
}

nav ul li a {
    display: block;
    text-decoration: none;
    font-size: 1.25rem;
    color: white;
    padding: 0.5rem;
    margin: 0 0.5rem;
    border-radius: 0.5rem;
}

